# score_os_images

./: .bazelrc  MODULE.bazel  README.md  project_config.bzl
qnx8/: README.md
qnx8/boards/common/: BUILD  common.build  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub
qnx8/boards/qemu-arm64virt/: BUILD  blk-start.sh  initscript  misc-services.sh  mount-fs.sh  net-start.sh  qemu-arm64virt.build  run-qemu-arm64virt.sh  target.build
qnx8/boards/qemu-x86_64/: BUILD  blk-start.sh  initscript  net-start.sh  qemu-x86_64.build  run-qemu-x86_64.sh  target.build
