# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "os_images",
    version = "1.0",
)

# ------------------------------------------------------------------------------
# QNX toolchain
bazel_dep(name = "score_toolchains_qnx", version = "0.0.4")

toolchains_qnx = use_extension("@score_toolchains_qnx//:extensions.bzl", "toolchains_qnx", dev_dependency=True)
toolchains_qnx.sdp(
    url = "file:///home/gjt2abt/qnx803.tgz",
    sha256 = "8c62b8567727d2e402165eba5a3b29c56ad74165575412a07981b176cdadcaa2",
)

use_repo(toolchains_qnx, "toolchains_qnx_sdp", "toolchains_qnx_ifs")

register_toolchains("@toolchains_qnx_ifs//:ifs_x86_64", dev_dependency=True)
# mkifs is independent of target platform, so we just need _one_ toolchain.
#register_toolchains("@toolchains_qnx_ifs//:ifs_aarch64")


# ------------------------------------------------------------------------------
# General purpose Bazel extensions

# Compliance and licensing toolchain
bazel_dep(name = "score_dash_license_checker", version = "0.1.2")
bazel_dep(name = "score_cr_checker", version = "0.2.2")
bazel_dep(name = "score_python_basics", version = "0.3.0")
bazel_dep(name = "score_starpls_lsp", version = "0.1.0")

# Formatting and linting helpers
bazel_dep(name = "score_format_checker", version = "0.1.1")
bazel_dep(name = "aspect_rules_lint", version = "1.3.1")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

# Documentation tools
bazel_dep(name = "score_docs_as_code", version = "0.2.4")
